Bug 74831 - Pop-ups aren't stacked on top of other surfaces
Summary: Pop-ups aren't stacked on top of other surfaces
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-11 08:57 UTC by Emilio Pozuelo Monfort
Modified: 2014-04-07 18:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Emilio Pozuelo Monfort 2014-02-11 08:57:19 UTC
Commit da704d97faef87520c5b055e4b5c8d1f6c8fc1be fixed a bug where if you had two windows opened, A and B, with A partially behind B, and you right-clicked on A, the context menu would appear on top of A but behind B. That commit introduced a regression (see bug #72547) so it was reverted. I'm opening this so we don't forget about the original issue.
Comment 1 Emilio Pozuelo Monfort 2014-02-11 09:02:23 UTC
We have two options here:

- do what da704d did, i.e. raise the pop-up to the top of the layer, but fixing the regression,

- or we could activate A upon receiving the right click so that it goes in front of B. This is what at least gnome-shell does.
Comment 2 Kristian Høgsberg 2014-04-07 18:52:33 UTC
commit f0ce581b923a4b6fd0346b09092bcaa17ba5a840
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Apr 7 11:52:17 2014 -0700

    desktop-shell: Activate surface on right click too
    
    This raises the surface to the top on right click as well, which fixes
    pop stacking.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=74831


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.